Fixed 404 header overlapping text on some devices

--- a/src/styles/page/missing-page.module.scss
+++ b/src/styles/page/missing-page.module.scss
@@ -1,5 +1,6 @@
 @import "../../styles/sass-variables.scss";
 .container {
-    width:100%;
-    text-align:center;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
 }
